sort.baseball.SelectBaseball.scala.code
override def run(){
  var nbrB:Int = getBasesAmount();
  var posBABouger:Int = 0;
  var numABouger:Int = 0;
  var posJB:Int = 0;
  var posJP:Int = 0;
  init();
  
  for (i<-0 to nbrB) {
		posJB = trouveBaseJoueur(i,nbrB)._1
		posJP = trouveBaseJoueur(i,nbrB)._2
    deplaceTrou(posJB,posJP)
  }
  
}

def init(){
  var n = getHoleBase()
  for (i<-1 to n) {
    if (getHoleBase()!=0) {
      move((getHoleBase()-1),0)
    }
  }
}
/*
def trouveBaseJoueur(base:Int, nbrB:Int):(Int,Int)={
  for (i<-0 to nbrB) {
    if (i!= base) {
      if (getPlayerColor(i,0)==base) {
        return (i,0)
      } 
      else if (getPlayerColor(i,0)==base) {
        return (i,1)
      }
    }
  }
  return (base,0)
}

def deplaceTrou(baseJ:Int,posJ:Int){
  var pos = getHoleBase();
  for (i<-pos to baseJ-2){
    move(i+1,0);
  }
  move(baseJ-1,0)
    
}